# skate-tricks

./: .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml  setup.cfg
alembic/: env.py
migrations/: env.py
migrations/versions/: 2e288f504e59_first_revision.py
skate_tricks/: api_endpoints.py  database_operations.py  run.py
skate_tricks/configs/: api_config.py  db_config.py  db_setup.py
skate_tricks/constants/: enums.py
skate_tricks/schemas/: postgres_models.py  pydantic_schemas.py
tests/: database_operations_test.py  database_settings_test.py  database_test.py
